--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to Emptum Shopper</title>
-<meta http-equiv="refresh" content="0; URL=../code/index.html">
-<link rel="canonical" href="../code/index.html">
+<meta http-equiv="refresh" content="0; URL=https://winter22sofe2720.github.io/CRN-73378-Group-7-Project/Code/index.html">
+<link rel="canonical" href="https://winter22sofe2720.github.io/CRN-73378-Group-7-Project/Code/index.html">
