--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Just used to redirect to the index.html in the code directory -->
+
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to Emptum Shopper</title>
