--- a/Code/index.html
+++ b/Code/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -26,15 +27,13 @@
                           <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                          <a href="beauty.html">Beauty and Personal Care</a>
-                          <a href="books.html">Books</a>
-                          <a href="men.html">Men's Clothing</a>
-                          <a href="women.html">Women's Clothing</a>
-                          <a href="electronics.html">Electronics</a>
-                          <a href="grocery.html">Grocery</a>
+                          <a href="beauty1.html">Beauty and Personal Care</a>
+                          <a href="books1.html">Books</a>
+                          <a href="men1.html">Men's Clothing</a>
+                          <a href="women1.html">Women's Clothing</a>
+                          <a href="grocery1.html">Grocery</a>
                         </div>
                       </div>
-                    <li><a href ="about.html">About</a></li>
                     <li><a href ="contact.html">Contact</a></li>
                     <li><a href ="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
@@ -67,23 +66,29 @@
                         </div>
                         <h4>$45</h4>
                     </div>
-                    <a href ="#"><i class ="fas fa-shopping-cart" id = "cart"></i></a>
+                    <div class = "add-to-cart">
+                        <input type = "number" value = "1">
+                        <button class="normal">Add To Cart</button>
+                    </div>
                 </div>
                 <div class = "pro"> 
-                    <img src="images/electronics/sony-headphones.jpg" alt="">
+                    <img src="images/clothes/womenswear/dress12.jpg" alt="">
                     <div class="description">
-                        <span>Sony</span>
-                        <h5>Gen 3 Headphones</h5>
+                        <span>Dress</span>
+                        <h5>Dress 2</h5>
                         <div class ="rating">
                             <i class = "fas fa-star"></i>
                             <i class = "fas fa-star"></i>
                             <i class = "fas fa-star"></i>
                             <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
+                            <i class = "fas fa-star-o"></i>
                         </div>
-                        <h4>$200</h4>
+                        <h4>$80</h4>
                     </div>
-                    <a href ="#"><i class ="fas fa-shopping-cart" id = "cart"></i></a>
+                    <div class = "add-to-cart">
+                        <input type = "number" value = "1">
+                        <button class="normal">Add To Cart</button>
+                    </div>
                 </div>
                 <div class = "pro"> 
                     <img src="images/clothes/womenswear/top8.jpg" alt="">
@@ -99,13 +104,34 @@
                         </div>
                         <h4>$40</h4>
                     </div>
-                    <a href ="#"><i class ="fas fa-shopping-cart" id = "cart"></i></a>
+                    <div class = "add-to-cart">
+                        <input type = "number" value = "1">
+                        <button class="normal">Add To Cart</button>
+                    </div>
                 </div>
                 <div class = "pro"> 
-                    <img src="images/clothes/menswear/shirt.jpg" alt="">
+                    <img src="images/grocery/beverages/bev16.jpg" alt="">
                     <div class="description">
-                        <span>H&M</span>
-                        <h5>Men's Floral Shirt</h5>
+                        <span>Beverages</span>
+                        <h5>Beverage 4</h5>
+                        <div class ="rating">
+                            <i class = "fas fa-star"></i>
+                            <i class = "fas fa-star"></i>
+                            <i class = "fas fa-star"></i>
+                            <i class = "fas fa-star"></i>
+                        </div>
+                        <h4>$18.99</h4>
+                    </div>
+                    <div class = "add-to-cart">
+                        <input type = "number" value = "1">
+                        <button class="normal">Add To Cart</button>
+                    </div>
+                </div>
+                <div class = "pro"> 
+                    <img src="images/books/berserk.jpg" alt="">
+                    <div class="description">
+                        <span>Author2</span>
+                        <h5>Book 2</h5>
                         <div class ="rating">
                             <i class = "fas fa-star"></i>
                             <i class = "fas fa-star"></i>
@@ -113,59 +139,26 @@
                             <i class = "fas fa-star"></i>
                             <i class = "fas fa-star"></i>
                         </div>
-                        <h4>$45</h4>
+                        <h4>$35</h4>
                     </div>
-                    <a href ="#"><i class ="fas fa-shopping-cart" id = "cart"></i></a>
+                    <div class = "add-to-cart">
+                        <input type = "number" value = "1">
+                        <button class="normal">Add To Cart</button>
+                    </div>
                 </div>
                 <div class = "pro"> 
-                    <img src="images/electronics/iphone-11.jpg" alt="">
+                    <img src="images/beautynpersonalcare/anti-aging-cream.jpg" alt="">
                     <div class="description">
-                        <span>Apple</span>
-                        <h5>Iphone 11</h5>
+                        <span>Brickell</span>
+                        <h5>Men's Anti Aging Cream</h5>
                         <div class ="rating">
                             <i class = "fas fa-star"></i>
                             <i class = "fas fa-star"></i>
                             <i class = "fas fa-star"></i>
                             <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
                         </div>
-                        <h4>$679</h4>
+                        <h4>$29.99</h4>
                     </div>
-                    <a href ="#"><i class ="fas fa-shopping-cart" id = "cart"></i></a>
-                </div>
-                <div class = "pro"> 
-                    <img src="images/clothes/menswear/shirt.jpg" alt="">
-                    <div class="description">
-                        <span>H&M</span>
-                        <h5>Men's Floral Shirt</h5>
-                        <div class ="rating">
-                            <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
-                        </div>
-                        <h4>$45</h4>
-                    </div>
-                    <a href ="#"><i class ="fas fa-shopping-cart" id = "cart"></i></a>
-                </div>
-                <div class = "pro"> 
-                    <img src="images/clothes/menswear/shirt.jpg" alt="">
-                    <div class="description">
-                        <span>H&M</span>
-                        <h5>Men's Floral Shirt</h5>
-                        <div class ="rating">
-                            <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
-                            <i class = "fas fa-star"></i>
-                        </div>
-                        <h4>$45</h4>
-                    </div>
-                    <a href ="#"><i class ="fas fa-shopping-cart" id = "cart"></i></a>
-                </div>
-            </div>
         </section>
 
         <section id="newsletter" class = "section-p1 section-m1">
@@ -205,7 +198,7 @@
 
             <div class = "col">
                 <h4>My Account</h4>
-                <a href = "#">Sign In</a>
+                <a href = "signin.php">Sign In</a>
                 <a href = "#">View Cart</a>
                 <a href = "#">My Wishlist</a>
                 <a href = "#">Track My Order</a>
