--- a/Code/HTML/books1.html
+++ b/Code/HTML/books1.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
         <script src="https://kit.fontawesome.com/e8454b169c.js" crossorigin="anonymous"></script>
         <link rel ="stylesheet" href = "../CSS/style.css">
+        <script src="../Javascript/cart.js" defer></script>
 
     </head>
     <body>
